# gestmat

./: .gitignore  .gitmodules  CMakeLists.txt  todos.txt
src/: main.cpp
src/app/: application.cpp  application.h  events.cpp  events.h  jobscheduler.cpp  jobscheduler.h  log.h  settings.cpp  settings.h
src/core/: compress.cpp  compress.h  image.cpp  image.h  item_manager.cpp  item_manager.h  names.h  util.cpp  util.h  with.h  workspace.cpp  workspace.h
src/python/: CMakeLists.txt  init_python.h  py_api.h  with.cpp  with.h
src/rendering/: GLFWwindow_handler.cpp  GLFWwindow_handler.h  animation_util.h  dimensions.h  drawables.h  exceptions.h  glfw_utils.cpp  glfw_utils.h  gui.cpp  gui.h  keyboard_shortcuts.cpp  keyboard_shortcuts.h  views.h  window.cpp  window.h
src/rendering/ui/: dockspace.cpp  dockspace.h  main_menu_bar.cpp  main_menu_bar.h  shortcuts_list.h
src/rendering/ui/modales/: error_message.cpp  error_message.h  modals.h
src/rendering/ui/panels/: welcome.h
src/scripts/: util.py  workspace.py
src/ui/: dockspace.h  drawable.h  imgui_util.cpp  imgui_util.h  main_menu_bar.cpp  main_menu_bar.h  main_window.cpp  main_window.h  shortcut_list.cpp  state.h  style.cpp  style.h
src/ui/drawables/: category_widget.cpp  category_widget.h  debugger.cpp  debugger.h  history_widget.cpp  history_widget.h  items_alert.cpp  items_alert.h  items_list_widget.cpp  items_list_widget.h  items_loan.cpp  items_loan.h  items_management.cpp  items_management.h  items_state.cpp  items_state.h  items_stats.cpp  items_stats.h  menu_bar.cpp  menu_bar.h  nav_bar.cpp  nav_bar.h  properties_widget.cpp  properties_widget.h  restore.cpp  restore.h  select_item_widget.cpp  select_item_widget.h  show_item.cpp  show_item.h
src/ui/modales/: error_message.h
src/ui/panels/: welcome.cpp  welcome.h
src/ui/views/: default_view.h
src/ui/widgets/: combo.cpp  combo.h  date.cpp  date.h  filter.cpp  filter.h  misc.cpp  misc.h  modal.h  sortable.h
tests/: CMakeLists.txt  item_test.cpp
